; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_nicvf_queues.c_nicvf_get_sq_desc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_nicvf_queues.c_nicvf_get_sq_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_queue = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_queue*, i32)* @nicvf_get_sq_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nicvf_get_sq_desc(%struct.snd_queue* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_queue*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.snd_queue* %0, %struct.snd_queue** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.snd_queue*, %struct.snd_queue** %3, align 8
  %7 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load %struct.snd_queue*, %struct.snd_queue** %3, align 8
  %10 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %9, i32 0, i32 2
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @atomic_subtract_int(i32* %10, i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.snd_queue*, %struct.snd_queue** %3, align 8
  %15 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, %13
  store i32 %17, i32* %15, align 4
  %18 = load %struct.snd_queue*, %struct.snd_queue** %3, align 8
  %19 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = sub nsw i32 %21, 1
  %23 = load %struct.snd_queue*, %struct.snd_queue** %3, align 8
  %24 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, %22
  store i32 %26, i32* %24, align 4
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @atomic_subtract_int(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
